added material icons

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+	      "node_modules/material-icons/css/material-icons.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
