--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~9.1.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "material-design-icons": "^3.0.1",
+    "material-icons": "^0.3.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
